Revert "更新 Makefile"
This reverts commit b9562ce4763ed98aa5366c1df24d50e4f9120c45.

--- a/libs/libwebsockets/Makefile
+++ b/libs/libwebsockets/Makefile
@@ -56,6 +56,7 @@ define Package/libwebsockets-openssl
 	TITLE += (OpenSSL)
 	DEPENDS += +libopenssl
 	VARIANT:=openssl
+	CONFLICTS:=libwebsockets-full
 endef
 
 define Package/libwebsockets-mbedtls
@@ -63,6 +64,7 @@ define Package/libwebsockets-mbedtls
 	TITLE += (mbedTLS)
 	DEPENDS += +libmbedtls
 	VARIANT:=mbedtls
+	CONFLICTS:=libwebsockets-openssl
 endef
 
 define Package/libwebsockets-full
@@ -70,6 +72,7 @@ define Package/libwebsockets-full
 	TITLE += (Full - OpenSSL, libuv, plugins, CGI)
 	DEPENDS += +libopenssl +libuv
 	VARIANT:=full
+	PROVIDES:=libwebsockets-openssl
 endef
 
 ifeq ($(BUILD_VARIANT),openssl)
